--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     <div class="box">
                         <img src="images/project-1.jpg" alt="">
                         <div class="text">Covid Detection using X-Rays</div>
+                        <p>Corona Virus detection using the features in a X-ray using CNN from Scratch</p>
                         <a href="https://github.com/TejasMalik/COVID-Detection-CNN">Project Link</a>
                     </div>
                 </div>
@@ -199,6 +200,7 @@
                     <div class="box">
                         <img src="images/project-2.jpg" alt="">
                         <div class="text">Music Generator using LSTM</div>
+                        <p>Generating random musics with music21 library from scratch using RNN's and LSTM's</p>
                         <a href="https://github.com/TejasMalik/Music-Generator_using_LSTM">Project Link</a>
                     </div>
                 </div>
@@ -206,6 +208,7 @@
                     <div class="box">
                         <img src="images/project-3.jpg" alt="">
                         <div class="text">Rock, Paper and Scissors using CNN</div>
+                        <p>Evaluation of Classification model for rock, paper and scissors using CNN</p>
                         <a href="https://github.com/TejasMalik/Rock-Paper_Scissors">Project Link</a>
                     </div>
                 </div>
@@ -213,6 +216,7 @@
                     <div class="box">
                         <img src="images/project-4.jpg" alt="">
                         <div class="text">Simplfied Machine Learning App</div>
+                        <p>Application for generating the accuracy of different models of a dataset</p>
                         <a href="https://github.com/TejasMalik/Simplified-Machine-Learning-App-and-ChatBot">Project Link</a>
                     </div>
                 </div>
@@ -220,6 +224,7 @@
                     <div class="box">
                         <img src="images/project-5.jpg" alt="">
                         <div class="text">Chatbot from Scratch using Tflearn</div>
+                        <p>A conversational bot created from scratch using tensorflow and tflearn libraries</p>
                         <a href="https://github.com/TejasMalik/ChatBot-From-Scratch">Project Link</a>
                     </div>
                 </div>
