--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo">
-                <a href="#">Website<span>Portfolio.</span></a>
+                <a href="#">Website<span>Resume.</span></a>
             </div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
